--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,15 @@
 name = "hull_white"
 version = "0.1.0"
 authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
+homepage = "https://github.com/phillyfan1138/hull_white_rust"
+repository = "https://github.com/phillyfan1138/hull_white_rust"
+readme = "README.md"
+license = "MIT"
+description = "Pricing functions assuming a Hull White short rate"
 
 [dependencies]
 nrfind = "1.0.2"
-black_scholes = "0.2.6"
+black_scholes = "0.2.7"
 binomial_tree = "0.3.3"
 
 [dev-dependencies]
