--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,43 +1,25 @@
-name: Rust
+name: RustDeploy
 
-on: [push]
+on:
+  push:
+    branches: [ master, main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        rust: [stable, nightly]
-
+        rust: [stable]
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - uses: hecrj/setup-rust-action@master
       with:
         rust-version: ${{ matrix.rust }}
     - name: Build
       run: cargo build --verbose
-    - name: Run tests stable
-      if: matrix.rust == 'stable'
+    - name: Run tests
       run: cargo test --verbose
-    - name: Run tests nightly with coverage
-      if: matrix.rust == 'nightly' 
-      env:
-        CARGO_INCREMENTAL: 0
-        RUSTFLAGS: -Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort
-        RUSTDOCFLAGS: -Cpanic=abort
-        CRATE_NAME: hull_white
-      run: |
-        cargo build --verbose $CARGO_OPTIONS
-        cargo test --verbose $CARGO_OPTIONS
-        curl -L https://github.com/mozilla/grcov/releases/download/v0.5.15/grcov-linux-x86_64.tar.bz2 | tar jxf -
-        zip -0 ccov.zip `find . \( -name "${CRATE_NAME}*.gc*" \) -print`
-        ./grcov ccov.zip -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" -o lcov.info
-        bash <(curl -s https://codecov.io/bash) -f lcov.info -t ${{ secrets.CODECOV_TOKEN }}
     - name: Document 
       run: cargo doc
     - name: Publish
-      if: matrix.rust == 'stable'
-      run: |
-        cargo bench
-        cargo publish --token ${{ secrets.CARGO_TOKEN }} --allow-dirty || true
+      run: cargo publish --token ${{ secrets.CARGO_TOKEN }} --allow-dirty || true
