--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         path-to-lcov: "lcov.info"
-
+  
   bench:
     runs-on: ubuntu-latest
     steps:
@@ -50,15 +50,30 @@ jobs:
     - uses: hecrj/setup-rust-action@master
       with:
         rust-version: nightly
+
     - name: benchmark
       run: cargo bench | tee output.txt
-    - name: Store benchmark result
-      uses: rhysd/github-action-benchmark@v1
+
+    - name: Download previous benchmark data
+      uses: actions/cache@v1
       with:
+        path: ./cache
+        key: ${{ runner.os }}-benchmark
+    # Run `github-action-benchmark` action
+    - name: Store benchmark result
+      uses: benchmark-action/github-action-benchmark@v1
+      with:
+        # What benchmark tool the output.txt came from
         tool: 'cargo'
+        # Where the output from the benchmark tool is stored
         output-file-path: output.txt
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        # Show alert with commit comment on detecting possible performance regression
-        alert-threshold: '200%'
-        comment-on-alert: true
+        # Where the previous data file is stored
+        external-data-json-path: ./cache/benchmark-data.json
+        # Workflow will fail when an alert happens
         fail-on-alert: true
+        comment-on-alert: true
+        alert-threshold: '200%'
+
+
+    
+    
