--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,6 +71,7 @@ jobs:
         external-data-json-path: ./cache/benchmark-data.json
         # Workflow will fail when an alert happens
         fail-on-alert: true
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         comment-on-alert: true
         alert-threshold: '200%'
 
